refreshing webpage wip

--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -6,30 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
-
 <body>
-  <div class="container">
-    <h2 class="title"><a href="https://withline.xyz/" target="_blank"> Line</a></h2>
+  <div class="custom-container">
+    <h2 class="mt-4 mb-4"><a href="https://github.com/buildwithline/line" target="_blank" class="custom-link">Line</a></h2>
     <div class="card-case-study">
       <h4>Approach</h4>
-      <p>
-        This ongoing weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.
-      </p>
+      <p class="mt-2 text-base">This ongoing weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.</p>
 
       <h4>Motivation</h4>
-      <p>
-        Open source projects often face challenges in securing adequate funding. Line, an open source project itself, wants to change that. I was curious about the web3 space and this project gives me the opportunity to 
-        explore, learn and expand my horizon.
-      </p>
+      <p class="mt-2 text-base">Open source projects often face challenges in securing adequate funding. Line, an open source project itself, wants to change that. I was curious about the web3 space and this project gives me the opportunity to explore, learn and expand my horizon.</p>
     </div>
-
-    <div>
+    <div class="mb-4">
       <h4>Features</h4>
       <ul>
         <li>Sign up via GitHub's Oauth flow</li>
@@ -41,27 +31,22 @@
         <li>WIP: Add bounties to projects and smart contracts</li>
       </ul>
     </div>
-
-   
-
-   <div>
-    <ul class="casestudy-directory">
-      <li><a href="casestudy_rreminder.html" class="link">Previous case study</a></li>
-      <li><a href="index.html" class="link">Home</a></li>
-      <li><a href="casestudy_elderme.html" class="link">Next case study</a></li>
-    </ul>
-   </div>
-
-<footer>
-    <div class="contact">
-      <ul class="list-inline">
-        <li class="list-inline-item footer">&copy 2024, Elisa Burghard</li>
-        <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://gitlab.com/codersquirrel" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://twitter.com/codersquirrel1" target="_blank"> <i class="fab fa-twitter"></i></a></li>
+    <div>
+      <ul class="casestudy-directory">
+        <li><a href="casestudy_rreminder.html" class="custom-link">Previous case study</a></li>
+        <li><a href="index.html" class="custom-link">Home</a></li>
+        <li><a href="casestudy_elderme.html" class="custom-link">Next case study</a></li>
       </ul>
     </div>
-</footer>
+    <footer class="text-center p-4 mt-8">
+      <div class="flex justify-center space-x-4">
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
+        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
+      </div>
+      &copy; 2024 Elisa Burghard
+    </footer>
+  </div>
 </body>
 </html>
