--- a/casestudy_calculator.html
+++ b/casestudy_calculator.html
@@ -2,39 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Casestudy Calculator</title>
+  <title>Visa Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
-
 <body>
-  <div class="container">
-    <h2 class="title">Case study Visa Calculator</h2>
+  <div class="custom-container mt-4 mb-4">
+    <h2 class="mt-4 mb-4"><a href="https://github.com/buildwithline/line" target="_blank" class="custom-link">Visa Calculator</a></h2>
     <div class="card-case-study">
       <h4>Approach</h4>
-      <p>
-        This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.
-      </p>
-      <p>
-        The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.
-      </p>
+      <p>This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.</p>
+      <p>The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.</p>
 
       <h4>Motivation</h4>
-      <p>
-        Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.
-      </p>
-      <p>
-        Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.
-      </p>
+      <p>Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.</p>
+      <p>Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.</p>
     </div>
 
-    <div>
+    <div class="mb-4">
       <h4>Features</h4>
       <ul>
         <li>Enter country's visa regulations (maximum days in certain time frame, for example: Schengen Zone - 90 out of 180 days).</li>
@@ -47,34 +35,33 @@
         <li>The amount of days are calculated, once the submit button is hit.</li>
         <ul>
           <li>It informs on how many days are still open to fill the maximum days or how many days need to be removed to be within regulations.</li>
-           <li>It informs the user when the time frame ends.</li>
+          <li>It informs the user when the time frame ends.</li>
         </ul>
       </ul>
     </div>
 
     <div>
       <h4>Thanks</h4>
-      <p>I had my wonderful colleague <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> design the front end for me, thank you for that!</p>
+      <p>I had my wonderful colleague <a href="https://github.com/Holdenro" target="_blank" class="custom-link">Ronan Recune</a> design the front end for me, thank you for that!</p>
     </div>
 
-   <div>
-    <ul class="casestudy-directory">
-      <li><a href="casestudy_elderme.html" class="link">Previous case study</a></li>
-      <li><a href="index.html" class="link">Home</a></li>
-      <li><a href="casestudy_flashcards.html" class="link">Next case study</a></li>
-    </ul>
-   </div>
-
-<footer>
-    <div class="contact">
-      <ul class="list-inline">
-        <li class="list-inline-item footer">&copy 2024, Elisa Burghard</li>
-        <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://gitlab.com/codersquirrel" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
-        <li class="list-inline-item footer icon-footer"><a href="https://twitter.com/codersquirrel1" target="_blank"> <i class="fab fa-twitter"></i></a></li>
+    <div>
+      <ul class="casestudy-directory">
+        <li><a href="casestudy_elderme.html" class="custom-link">Previous case study</a></li>
+        <li><a href="index.html" class="custom-link">Home</a></li>
+        <li><a href="casestudy_flashcards.html" class="custom-link">Next case study</a></li>
       </ul>
     </div>
-</footer>
+
+    <footer class="bg-gray-100 text-center p-4 mt-8">
+      <div class="flex justify-center space-x-4">
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
+        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
+      </div>
+      &copy; 2024 Elisa Burghard
+    </footer>
+  </div>
 </body>
 </html>
