Adjust case study pages

--- a/casestudy_flashcards.html
+++ b/casestudy_flashcards.html
@@ -149,8 +149,10 @@
       </li>
       <li>
         Create a document to monitor my workflow and productivity
-        <img src="images/Screenshot 2020-02-14 at 13.29.07.png" alt="spreadsheet of task overview" class="image-sm">
-        <img src="images/Screenshot 2020-02-14 at 13.29.40.png" alt="spreadsheet of weekly overview" class="image-sm">
+        <div>
+          <img src="images/Screenshot 2020-02-14 at 13.29.07.png" alt="spreadsheet of task overview" class="image-sm">
+          <img src="images/Screenshot 2020-02-14 at 13.29.40.png" alt="spreadsheet of weekly overview" class="image-sm">
+        </div>
         <ul>
           <li>All tasks go into a spreadsheet, with an ID and overview when I started and finished the task</li>
           <li>A week to week overview with the tasks I want to tackle: a list above and then assigning them to each day, dividing it into “Caculation" and “Realtime"</li>
@@ -187,8 +189,6 @@
       </li>
     </ul>
 
-    
-
     <h5 class="mt-4 mb-2">Responsibilities</h5>
     <p>Stephanie for UX/UI Design and Elisa for frontend and backend development.</p>
 
@@ -198,7 +198,7 @@
       <a href="casestudy_rreminder.html" class="custom-link">Next case study</a>
     </div>
 
-    <footer class="text-center p-4 mt-8">
+    <footer class="bg-gray-100 text-center p-4 mt-8">
       <div class="flex justify-center space-x-4">
         <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
