--- a/casestudy_elderme.html
+++ b/casestudy_elderme.html
@@ -7,139 +7,127 @@
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div class="container collapsible">
-    <div class="content">
-      <h2 class="title">Case study ElderMe</h2>
-      <div class="card-case-study">
-        <h3>Goal</h3>
-        <p>
-          The product should facilitate the interaction and shared activities of elder persons and volunteers.The elder person can choose what activity they are interested in and be shown a selection of volunteers that share that interest. Then they can check out the volunteers profile and send them a meeting request with date and time. The volunteer then can accept or decline the request. If accepted, the meeting will be inserted into the users’ calendar. They can be edited or deleted.
-        </p>
+  <div class="custom-container mt-4 mb-4">
+    <h2 class="mt-4 mb-4">ElderMe</h2>
+    <div class="card-case-study">
+      <h3>Goal</h3>
+      <p>
+        The product should facilitate the interaction and shared activities of elder persons and volunteers. The elder person can choose what activity they are interested in and be shown a selection of volunteers that share that interest. Then they can check out the volunteer's profile and send them a meeting request with date and time. The volunteer then can accept or decline the request. If accepted, the meeting will be inserted into the users' calendar. They can be edited or deleted.
+      </p>
 
-        <p>
-          This project presented an opportunity to build a web application with ruby on rails from scratch, as well as work in a collaboration and collegial environment. As the DRI (designated responsible individual) of the team it tought me to take charge, be responsible and take ownership of things that didn't go as planned.
-        </p>
-      </div>
+      <p>
+        This project presented an opportunity to build a web application with Ruby on Rails from scratch, as well as work in a collaboration and collegial environment. As the DRI (designated responsible individual) of the team, it taught me to take charge, be responsible, and take ownership of things that didn't go as planned.
+      </p>
+    </div>
 
-      <div class="card-case-study">
-        <h3>Approach</h3>
-        <p>
-          The guidelines of this project were specifying that all team members will work on both the front and back end. That brought its own difficulties with it - a certain disinterest, disliking or insecurity in one of the areas. We tried to divide the work up equally, but preferences showed early on that it made more sense to let each team member focus on what they wanted to be their area of expertise.
-        </p>
-      </div>
+      <h3>Approach</h3>
+      <p>
+        The guidelines of this project were specifying that all team members will work on both the front and back end. That brought its own difficulties with it - a certain disinterest, disliking, or insecurity in one of the areas. We tried to divide the work up equally, but preferences showed early on that it made more sense to let each team member focus on what they wanted to be their area of expertise.
+      </p>
+    </div>
 
-      <div class="card-case-study">
-        <h3>First steps:</h3>
-        <div class="container">
-          <div class="card-portfolio">
-            <div class="card-portfolio-text">
-              <ul>
-                <li>
-                  First we needed to setup the rails template, create a repository on GitHub, buy a domain name, and set up a host - in this case Heroku.
-                </li>
-                <li>
-                  Although we sat at the same group of tables, we had our own slack channel to have a record of our progress, keep every member informed and not interrupt them in their work flow.
-                </li>
-                <li>
-                  To keep a project overview, we drew out a map of the different page views and their correlation with pen and paper. This step was repeated every morning, so it would be up to date and we would know which parts of the project were finished and which task(s) to assign to which team member.
-                </li>
-                <li>
-                  We complemented the map with a Trello project online to track all tasks, their assigned developer, and their progress. The tasks sections were grouped together by color labels.
-                  The Overview column held all the main groups of tasks, for example the groupings of MVC - model, view and controller - styling, pop-ups and others. These cards were never moved, to be consulted and updated, ticking off the individual tasks located in the checklist. According to these checklists, each item was placed on an individual task card with the same color label and a developer assigned to it. Task cards were accompanied by a feature branch - ideally named the same or similar - and moved to the column correspondent to their progress: To Do, Started, Review, and Done. A card that reached the Review column, had been pushed to GitHub and a pull request had been issued. The assigned developer sent out a notification to the team on slack, so the two others could review the code in the pull request, make suggestions or request changes. One of the two would then merge the feature branch and all members could pull the updated master branch onto their local repositories.
-                </li>
-              </ul>
-            </div>
-          </div>
+    <div class="mb-4">
+      <h3>First steps:</h3>
+      <div class="container">
+        <div class="card-portfolio">
+          <div class="card-portfolio-text">
+            <ul>
+              <li>
+                First, we needed to set up the Rails template, create a repository on GitHub, buy a domain name, and set up a host - in this case Heroku.
+              </li>
+              <li>
+                Although we sat at the same group of tables, we had our own Slack channel to have a record of our progress, keep every member informed, and not interrupt them in their workflow.
+              </li>
+              <li>
+                To keep a project overview, we drew out a map of the different page views and their correlation with pen and paper. This step was repeated every morning, so it would be up-to-date, and we would know which parts of the project were finished and which tasks to assign to which team member.
+              </li>
+              <li>
+                We complemented the map with a Trello project online to track all tasks, their assigned developer, and their progress. The tasks sections were grouped together by color labels. The Overview column held all the main groups of tasks, for example, the groupings of MVC - model, view, and controller - styling, pop-ups, and others. These cards were never moved, to be consulted and updated, ticking off the individual tasks located in the checklist. According to these checklists, each item was placed on an individual task card with the same color label and a developer assigned to it. Task cards were accompanied by a feature branch - ideally named the same or similar - and moved to the column correspondent to their progress: To Do, Started, Review, and Done. A card that reached the Review column had been pushed to GitHub, and a pull request had been issued. The assigned developer sent out a notification to the team on Slack, so the two others could review the code in the pull request, make suggestions, or request changes. One of the two would then merge the feature branch, and all members could pull the updated master branch onto their local repositories.
+              </li>
+            </ul>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="card-case-study">
-        <h3>Lessons learned</h3>
-        <ul>
-          <li>
-            Working in teams is hard. When working on a project by yourself, you are the one with all the strings in hand. You decide in which direction the product will move, what to add, what the MVP should include, how fast to move. In a team, you have to come to a consensus. You have to slow down situations to not jump the gun but follow the order of things.
-          </li>
+    <div class="card-case-study">
+      <h3>Lessons learned</h3>
+      <ul>
+        <li>
+          Working in teams is hard. When working on a project by yourself, you are the one with all the strings in hand. You decide in which direction the product will move, what to add, what the MVP should include, how fast to move. In a team, you have to come to a consensus. You have to slow down situations to not jump the gun but follow the order of things.
+        </li>
 
-          <li>
-            Start the day with having a new look at where we are at and what needs to be achieved for that work day and divide up the different tasks to the team members, will help immensely.
-          </li>
+        <li>
+          Start the day with having a new look at where we are at and what needs to be achieved for that workday and divide up the different tasks to the team members will help immensely.
+        </li>
 
-          <li>
-            Have a list of tasks easily accessible to all team members at all times. The team members for their part need inform on what their current task is and continuously update their progress. This way, everyone is always up to date, can check in with their colleagues to see if they need help with a task (or the team member can add another colleague to a task to let them know they need support), others can know which task is still open or if it makes sense to start a task if the task directly previous, that needs to be done before it can continue down that line. Others can see if it makes sense to pick up a task that depends on another task to be completed. It is also motivating and keeps up morale to see how we as a team are advancing, that the progress we make, does advance the product.
-          </li>
+        <li>
+          Have a list of tasks easily accessible to all team members at all times. The team members, for their part, need to inform on what their current task is and continuously update their progress. This way, everyone is always up to date, can check in with their colleagues to see if they need help with a task (or the team member can add another colleague to a task to let them know they need support), others can know which task is still open or if it makes sense to start a task if the task directly previous, that needs to be done before it can continue down that line. Others can see if it makes sense to pick up a task that depends on another task to be completed. It is also motivating and keeps up morale to see how we as a team are advancing, that the progress we make does advance the product.
+        </li>
 
-          <li>
-            Communication. Probably the biggest part of working in a team, that needs to be the top priority above all else. If there is no (good and productive) communication, there won’t be a (good) product that users will use. And does a product that has no users even exist? The tree that falls when no one is around, doesn’t make a sound. Even working at one work station does not mean there will be automatic communication. Using tools like slack also help having a record that you can refer to when things get hectic. When communicating with each other, be kind to one another, respectful, try to see where the other person is coming from. Give constructive criticism, say why you prefer one solution over the other so that the other person can understand here YOU are coming from.
-          </li>
-          <li>
-            You need to be on the top of your game. When multiple people work in the same documents, even when they are on different tasks in different parts of the code, it can get confusing. Not jumping to the next task without consulting the task list and its assignees is fundamental.
-          </li>
+        <li>
+          Communication. Probably the biggest part of working in a team, that needs to be the top priority above all else. If there is no (good and productive) communication, there won't be a (good) product that users will use. And does a product that has no users even exist? The tree that falls when no one is around doesn't make a sound. Even working at one workstation does not mean there will be automatic communication. Using tools like Slack also help have a record that you can refer to when things get hectic. When communicating with each other, be kind to one another, respectful, try to see where the other person is coming from. Give constructive criticism, say why you prefer one solution over the other so that the other person can understand here YOU are coming from.
+        </li>
 
-          <li>
-            Someone has to be in charge. Even in a team as small as three, someone has to take the lead and keep an eye on things so the overview is safe and up to date. The person in charge doesn’t have to be the same every day, but one has to be the go to person.
-          </li>
+        <li>
+          You need to be on top of your game. When multiple people work on the same documents, even when they are on different tasks in different parts of the code, it can get confusing. Not jumping to the next task without consulting the task list and its assignees is fundamental.
+        </li>
 
-          <li>
-            Every day you learn an increased amount. Give yourself breaks. There is no sense in pushing and pushing until exhaustion.
-          </li>
+        <li>
+          Someone has to be in charge. Even in a team as small as three, someone has to take the lead and keep an eye on things so the overview is safe and up to date. The person in charge doesn't have to be the same every day, but one has to be the go-to person.
+        </li>
 
-          <li>
-            Different people will care different amounts about the product. In result they will invest different amounts of energy, time and emotion into it. You have to be ok with that and keep true to what you want to invest.
-          </li>
+        <li>
+          Every day you learn an increased amount. Give yourself breaks. There is no sense in pushing and pushing until exhaustion.
+        </li>
 
-          <li>
-            Focus on yourself and your tasks but don’t loose sight of what the rest of the team are up to.
-          </li>
-        </ul>
-      </div>
+        <li>
+          Different people will care different amounts about the product. In result they will invest different amounts of energy, time and emotion into it. You have to be ok with that and keep true to what you want to invest.
+        </li>
 
-      <div class="card-case-study">
-        <h3>Open issues</h3>
-        <p>
-          <ul>
-            <li>Add an OAuth to sign in with gmail or facebook</li>
-            <li>Add a feature that shows volunteers with same interest within certain radius.</li>
-            <li>Add feature to upload a profile picture and a video</li>
-            <li>Add a feature of subtitles on video.</li>
-            <li>Make the webpage more accessible. Try a screenreader and know what it still needs.</li>
-          </ul>
-        </p>
-      </div>
+        <li>
+          Focus on yourself and your tasks but don't lose sight of what the rest of the team is up to.
+        </li>
+      </ul>
+    </div>
+
+    <div class="card-case-study">
+      <h3>Open issues</h3>
+      <ul>
+        <li>Add an OAuth to sign in with Gmail or Facebook</li>
+        <li>Add a feature that shows volunteers with same interest within a certain radius.</li>
+        <li>Add a feature to upload a profile picture and a video</li>
+        <li>Add a feature of subtitles on video.</li>
+        <li>Make the webpage more accessible. Try a screen reader and know what it still needs.</li>
+      </ul>
+    </div>
 
     <div class="card-case-study">
       <h3>Thanks</h3>
       <p>
-        This was a team effort, I could not have done it without <a href="https://github.com/Holdenro" class="link" target="_blank">Ronan Recune</a> - design/front end, and <a href="https://github.com/M-algbawi" class="link" target="_blank">Monther Al Gbawi</a> - front end. It has been a pleasure to work with you!
+        This was a team effort, I could not have done it without <a href="https://github.com/Holdenro" class="custom-link" target="_blank">Ronan Recune</a> - design/front end, and <a href="https://github.com/M-algbawi" class="custom-link" target="_blank">Monther Al Gbawi</a> - front end. It has been a pleasure to work with you!
       </p>
     </div>
 
-
-   <div>
+    <div>
       <ul class="casestudy-directory">
-        <li><a href="casestudy_line.html" class="link">Previous case study</a></li>
-        <li><a href="index.html" class="link">Home</a></li>
-        <li><a href="casestudy_calculator.html" class="link">Next case study</a></li>
+        <li><a href="casestudy_line.html" class="custom-link">Previous case study</a></li>
+        <li><a href="index.html" class="custom-link">Home</a></li>
+        <li><a href="casestudy_calculator.html" class="custom-link">Next case study</a></li>
       </ul>
-  </div>
-  <footer>
-      <div class="contact">
-        <ul class="list-inline">
-          <li class="list-inline-item footer">&copy 2024, Elisa Burghard</li>
-          <li class="list-inline-item icon-footer"><a href="https://github.com/codersquirrelbln/" target="_blank"><i class="fab fa-github footer icon-footer "></i></a></li>
-          <li class="list-inline-item footer icon-footer"><a href="https://www.linkedin.com/in/elisaburghard/" target="_blank"><i class="fab fa-linkedin footer icon-footer"></i></a></li>
-          <li class="list-inline-item footer icon-footer"><a href="https://gitlab.com/codersquirrel" target="_blank"> <i class="fab fa-gitlab"></i></a></li>
-          <li class="list-inline-item footer icon-footer"><a href="https://twitter.com/codersquirrel1" target="_blank"> <i class="fab fa-twitter"></i></a></li>
-        </ul>
+    </div>
+    <footer class="text-center p-4 mt-8">
+      <div class="flex justify-center space-x-4">
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
+        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
       </div>
-
-  </footer>
+      &copy; 2024 Elisa Burghard
+    </footer>
+  </div>
 </body>
 </html>
