Fix case studies

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,300;1,400;1,600;1,800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
   <div class="container mx-auto px-4 py-8">
@@ -22,7 +23,7 @@
 
     <div class="flex flex-wrap -mx-4">
       <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
+        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img src="images/line.png" alt="Screenshot of the Line Platform">
           <div class="p-4 card-body">
             <div class="project-info">
@@ -39,7 +40,7 @@
       </div>
 
       <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
+        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/eldermeLandingpageScreenshot.png" alt="Screenshot of the ElderMe app">
           <div class="p-4 card-body">
             <h3 class="font-bold mb-4">ElderMe</a> </h3>
@@ -53,7 +54,7 @@
       </div>
 
       <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
+        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/visa_calculator_landing.png" alt="Screenshot of the Visa Calculator">
           <div class="p-4 card-body">
             <h3 class="font-bold mb-4">The Visa Calculator</a></h3>
@@ -68,7 +69,7 @@
       </div>
 
       <div class="w-full md:w-1/2 px-4 mb-8">
-        <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
+        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
           <img class="w-full" src="images/roadmap.jpg" alt="Drawn Out Roadmap">
           <div class="p-4 card-body">
             <h3 class="font-bold mb-4">FlashBack</a></h3>
@@ -76,6 +77,20 @@
             <div class="flex space-x-2 mt-4">
               <a href="https://gitlab.com/codersquirrel/flashBack" target="_blank" class="custom-link">Code</a>
               <a href="casestudy_flashcards.html" class="custom-link">Case Study</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-full md:w-1/2 px-4 mb-8">
+        <div class="card bg-white shadow-md rounded-lg overflow-hidden">
+          <img class="w-full" src="images/r_reminder.png" alt="Reminder app">
+          <div class="p-4 card-body">
+            <h3 class="font-bold mb-4">RReminder</a></h3>
+            <p class="mt-2 text-base"> You'll never forget anything important ever again.</p>
+            <div class="flex space-x-2 mt-4">
+              <a href="https://gitlab.com/codersquirrel/r_reminder" target="_blank" class="custom-link">Code</a>
+              <a href="casestudy_rreminder.html" class="custom-link">Case Study</a>
             </div>
           </div>
         </div>
