--- a/casestudy_calculator.html
+++ b/casestudy_calculator.html
@@ -4,27 +4,29 @@
   <meta charset="UTF-8">
   <title>Visa Calculator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,300;1,400;1,600;1,800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-  <div class="custom-container mt-4 mb-4">
-    <h2 class="mt-4 mb-4"><a href="https://github.com/buildwithline/line" target="_blank" class="custom-link">Visa Calculator</a></h2>
-    <div class="card-case-study">
-      <h4>Approach</h4>
-      <p>This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.</p>
-      <p>The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.</p>
+  <div class="mx-auto max-w-xl p-5 bg-white">
+    <h2 class="text-2xl font-bold mt-4 mb-4">Visa Calculator</h2>
+    <div>
+      <h4 class="text-xl font-semibold my-2 mt-6">Approach</h4>
+      <p class="mt-2 text-base">This Visa Calculator was created for travellers, that want to calculate one or more stays in a country within a certain time frame.</p>
+      <p class="mt-2 text-base">The user can insert individual travel limitations set by different countries and will get information about how many days they can still use up or how many days they would have to remove from their travels to be within the visa regulations.</p>
 
-      <h4>Motivation</h4>
-      <p>Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.</p>
-      <p>Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.</p>
+      <h4 class="text-xl font-semibold my-2 mt-6">Motivation</h4>
+      <p class="mt-2 text-base">Since I like travelling and my s.o. and I work remotely, we have to be aware of visa regulations of the countries we visit for expanded times. We were calculating dates manually and rechecked continuously, so we would comply with the law.</p>
+      <p class="mt-2 text-base">Additionally to its personal practicality, this project gave me the chance to expand my knowledge and experience working with JavaScript. As a backend developer it is important to understand front end complexities and limitations as well as your own area of expertise. This ultimately improves the collaboration in teams of backend and frontend developers.</p>
     </div>
 
     <div class="mb-4">
-      <h4>Features</h4>
-      <ul>
+      <h4 class="text-xl font-semibold my-2 mt-6">Features</h4>
+      <ul class="list-disc pl-5">
         <li>Enter country's visa regulations (maximum days in certain time frame, for example: Schengen Zone - 90 out of 180 days).</li>
         <li>Enter first date of entry.</li>
         <li>The user will be informed when the time frame ends - until when can I plan my 90 days.</li>
@@ -40,27 +42,35 @@
       </ul>
     </div>
 
-    <div>
-      <h4>Thanks</h4>
-      <p>I had my wonderful colleague <a href="https://github.com/Holdenro" target="_blank" class="custom-link">Ronan Recune</a> design the front end for me, thank you for that!</p>
+    <div class="mb-4">
+      <h4 class="text-xl font-semibold my-2 mt-6">Thanks</h4>
+      <p class="mt-2 text-base">I had my wonderful colleague <a href="https://github.com/Holdenro" target="_blank" class="custom-link">Ronan Recune</a> design the front end for me, thank you for that!</p>
     </div>
 
     <div>
-      <ul class="casestudy-directory">
-        <li><a href="casestudy_elderme.html" class="custom-link">Previous case study</a></li>
-        <li><a href="index.html" class="custom-link">Home</a></li>
-        <li><a href="casestudy_flashcards.html" class="custom-link">Next case study</a></li>
+      <ul class="flex list-none p-0">
+        <li class="mx-2">
+          <a href="casestudy_elderme.html" class="custom-link">Previous case study</a>
+        </li>
+        <li class="mx-2">
+          <a href="index.html" class="custom-link">Home</a>
+        </li>
+        <li class="mx-2">
+          <a href="casestudy_flashcards.html" class="custom-link">Next case study</a>
+        </li>
       </ul>
     </div>
 
-    <footer class="bg-gray-100 text-center p-4 mt-8">
+    <footer class="text-center p-4 mt-8">
       <div class="flex justify-center space-x-4">
-        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
-        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
-        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab fa-2x"></i></a>
+        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter fa-2x"></i></a>
       </div>
-      &copy; 2024 Elisa Burghard
+      <div class="mt-4 text-sm">
+        &copy; 2024 Elisa Burghard
+      </div>
     </footer>
   </div>
 </body>
