--- a/casestudy_line.html
+++ b/casestudy_line.html
@@ -4,24 +4,26 @@
   <meta charset="UTF-8">
   <title>Line</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,800;1,300;1,400;1,600;1,800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-  <div class="custom-container">
-    <h2 class="mt-4 mb-4"><a href="https://github.com/buildwithline/line" target="_blank" class="custom-link">Line</a></h2>
-    <div class="card-case-study">
-      <h4>Approach</h4>
+  <div class="mx-auto max-w-xl p-5 bg-white">
+    <h2 class="text-2xl font-bold mt-4 mb-4">Line</h2>
+    <div>
+      <h4 class="text-xl font-semibold my-2 mt-6">Approach</h4>
       <p class="mt-2 text-base">This ongoing weekend project gives users a platform to create campaigns for their own projects to receive contributions from wallet to wallet.</p>
 
-      <h4>Motivation</h4>
+      <h4 class="text-xl font-semibold my-2 mt-6">Motivation</h4>
       <p class="mt-2 text-base">Open source projects often face challenges in securing adequate funding. Line, an open source project itself, wants to change that. I was curious about the web3 space and this project gives me the opportunity to explore, learn and expand my horizon.</p>
     </div>
     <div class="mb-4">
-      <h4>Features</h4>
-      <ul>
+      <h4 class="text-xl font-semibold my-2 mt-6">Features</h4>
+      <ul class="list-disc pl-5">
         <li>Sign up via GitHub's Oauth flow</li>
         <li>See all open repositories of which you are the owner</li>
         <li>Add a wallet through the web3Modal of WalletConnect</li>
@@ -32,20 +34,29 @@
       </ul>
     </div>
     <div>
-      <ul class="casestudy-directory">
-        <li><a href="casestudy_rreminder.html" class="custom-link">Previous case study</a></li>
-        <li><a href="index.html" class="custom-link">Home</a></li>
-        <li><a href="casestudy_elderme.html" class="custom-link">Next case study</a></li>
+      <ul class="flex list-none p-0">
+        <li class="mx-2">
+          <a href="casestudy_rreminder.html" class="custom-link">Previous case study</a>
+        </li>
+        <li class="mx-2">
+          <a href="index.html" class="custom-link">Home</a>
+        </li>
+        <li class="mx-2">
+          <a href="casestudy_elderme.html" class="custom-link">Next case study</a>
+        </li>
       </ul>
     </div>
+    
     <footer class="text-center p-4 mt-8">
       <div class="flex justify-center space-x-4">
-        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github"></i></a>
-        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin"></i></a>
-        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab"></i></a>
-        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/codersquirrelbln/" target="_blank" class="text-gray-700"><i class="fab fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/elisaburghard/" target="_blank" class="text-blue-700"><i class="fab fa-linkedin fa-2x"></i></a>
+        <a href="https://gitlab.com/codersquirrel" target="_blank" class="text-orange-500"><i class="fab fa-gitlab fa-2x"></i></a>
+        <a href="https://twitter.com/codersquirrel1" target="_blank" class="text-blue-400"><i class="fab fa-twitter fa-2x"></i></a>
       </div>
-      &copy; 2024 Elisa Burghard
+      <div class="mt-4 text-sm">
+        &copy; 2024 Elisa Burghard
+      </div>
     </footer>
   </div>
 </body>
